# zephyr_weather_station

./: .cline_mcp_config.json  .gitignore  AGENT_RULES.md  Architcture.md  Dockerfile  PLAN.md  README.md  VISION.md  docker-entrypoint.sh  test_container.sh  west.yml  west_mcp_server.py
.clinerules/: basic.md  codingguidelines.md
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: main.c
app/src/common/: messages.h
app/src/subsystems/: display_mgr.c  fake_sensor.c  sensor_mgr.c  shell_iface.c
app/tests/: test_display_mgr.c  test_sensor_mgr.c  test_weather_station.c
app/tests/weather_station/: CMakeLists.txt  main.c  messages.h  prj.conf  test_display_mgr.c  test_sensor_mgr.c  test_weather_station.c  testcase.yaml
cline/: cline_api_config.template.json  cline_api_config.template.qwen.json  cline_mcp_settings.json  setup_cline.sh
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
